--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "devDependencies": {
     "nodemon": "^2.0.13"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://192.168.2.35:3001"
 }
