--- a/src/settings.json
+++ b/src/settings.json
@@ -1,4 +1,5 @@
 {
-    "serverUrl": "http://localhost:3000",
-    "socketServer": "http://localhost:3000"
+    "serverUrl": "http://192.168.2.35:3000",
+    "socketServer": "http://192.168.2.35:3000",
+    "mouseCursorEmitInterval": 300
 }
